--- a/en.lproj/MainMenu.xib
+++ b/en.lproj/MainMenu.xib
@@ -18,16 +18,22 @@
                 <menuItem title="KnockKnock" id="56">
                     <menu key="submenu" title="KnockKnock" systemMenu="apple" id="57">
                         <items>
-                            <menuItem title="About/Info" id="134">
+                            <menuItem title="About" id="134">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="about:" target="494" id="1Av-a0-4RW"/>
                                 </connections>
                             </menuItem>
+                            <menuItem title="Preferences" tag="1" id="Cd7-Xq-jnw">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="showPreferences:" target="494" id="h1a-NR-0PY"/>
+                                </connections>
+                            </menuItem>
                             <menuItem isSeparatorItem="YES" id="149">
                                 <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                             </menuItem>
-                            <menuItem title="Quit" keyEquivalent="q" id="136">
+                            <menuItem title="Quit" tag="2" keyEquivalent="q" id="136">
                                 <connections>
                                     <action selector="terminate:" target="-3" id="449"/>
                                 </connections>
@@ -71,7 +77,7 @@
                                             </textFieldCell>
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                             <prototypeCellViews>
-                                                <tableCellView identifier="categoryCell" id="xyl-A2-Ges">
+                                                <tableCellView identifier="categoryCell" id="xyl-A2-Ges" customClass="kkRowCell">
                                                     <rect key="frame" x="1" y="1" width="345" height="66"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
@@ -80,7 +86,7 @@
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSColorPanel" id="JBT-rT-wqy"/>
                                                         </imageView>
-                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="xGV-Tx-yH1">
+                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" tag="100" id="xGV-Tx-yH1">
                                                             <rect key="frame" x="54" y="28" width="950" height="26"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Item Category" id="DUA-BI-gth">
@@ -169,7 +175,7 @@
                                                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="580"/>
                                                         </imageView>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="578">
-                                                            <rect key="frame" x="50" y="34" width="950" height="18"/>
+                                                            <rect key="frame" x="50" y="36" width="950" height="18"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Item Name" id="579">
                                                                 <font key="font" size="13" name="Menlo-Regular"/>
@@ -178,7 +184,7 @@
                                                             </textFieldCell>
                                                         </textField>
                                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" tag="101" id="BUm-sJ-dtF">
-                                                            <rect key="frame" x="51" y="17" width="950" height="17"/>
+                                                            <rect key="frame" x="68" y="16" width="928" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="item path" id="mds-5g-doD">
                                                                 <font key="font" size="11" name="Menlo-Regular"/>
@@ -243,28 +249,15 @@
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             </textFieldCell>
                                                         </textField>
+                                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" tag="100" id="lmb-Gf-NAo">
+                                                            <rect key="frame" x="54" y="18" width="12" height="12"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="signed" id="gVd-oB-yPP"/>
+                                                        </imageView>
                                                     </subviews>
                                                     <connections>
                                                         <outlet property="imageView" destination="577" id="581"/>
                                                         <outlet property="textField" destination="578" id="582"/>
-                                                    </connections>
-                                                </tableCellView>
-                                                <tableCellView identifier="NoResultsCell" id="xkT-Oy-yar">
-                                                    <rect key="frame" x="1" y="1" width="834" height="66"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <subviews>
-                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="sIr-dx-b6Y">
-                                                            <rect key="frame" x="1" y="24" width="832" height="19"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="center" title="No Items Found" id="dYX-xK-Qs1">
-                                                                <font key="font" size="13" name="Menlo-Regular"/>
-                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                            </textFieldCell>
-                                                        </textField>
-                                                    </subviews>
-                                                    <connections>
-                                                        <outlet property="textField" destination="sIr-dx-b6Y" id="GjZ-qU-Bdp"/>
                                                     </connections>
                                                 </tableCellView>
                                             </prototypeCellViews>
@@ -305,11 +298,20 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <progressIndicator horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" style="spinning" id="839">
+                    <progressIndicator hidden="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" style="spinning" id="839">
                         <rect key="frame" x="1163" y="6" width="32" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     </progressIndicator>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="745">
+                    <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="vRb-uD-d8v">
+                        <rect key="frame" x="363" y="412" width="843" height="18"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="no items found" id="lbV-TL-b11">
+                            <font key="font" size="13" name="Menlo-Regular"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="745">
                         <rect key="frame" x="875" y="15" width="268" height="18"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="status..." id="748">
@@ -383,6 +385,7 @@
         <customObject id="8VH-uv-w4O" customClass="ItemTableController">
             <connections>
                 <outlet property="itemTableView" destination="537" id="0xr-LE-bN9"/>
+                <outlet property="noItemsLabel" destination="vRb-uD-d8v" id="RmX-ef-y65"/>
             </connections>
         </customObject>
     </objects>
@@ -398,6 +401,7 @@
         <image name="settingsBG" width="256" height="256"/>
         <image name="show" width="256" height="256"/>
         <image name="showBG" width="256" height="256"/>
+        <image name="signed" width="256" height="256"/>
         <image name="startScan" width="256" height="256"/>
         <image name="startScanBG" width="256" height="256"/>
     </resources>
